# galois_field_2pm

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: gf2.rs  gf2_lut.rs  lib.rs
src/gf2/: clmul.rs  gf2_poly_div.rs
